--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,16 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Python
+__pycache__/
+*.pyc
+venv/
+*.env
+
+# 스크린샷 이미지 (Git에 올리지 않음)
+screenshot/
+!screenshot/.gitkeep
+
+# 업로더 설정 (민감 정보)
+uploader_config.json
